# user-service

./: .dockerignore  .env.local  .gitignore  Dockerfile  LICENSE  Makefile  docker-compose.local.yaml  pyproject.toml
app/: __main__.py  main.py
app/client/auth/: auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py
app/core/: config.py  prometheus_aio_server_interceptor.py
app/core/settings/: app.py  base.py  development.py  production.py
app/crud/: photo.py  user.py
app/database/: connection.py
app/error/: error.py  error_details.py
app/exceptions/: user_errors.py
app/minio_client/: minio_client.py
app/models/: user.py
app/protos/: user.proto
app/user/: user_pb2.py  user_pb2.pyi  user_pb2_grpc.py  user_server.py
app/utils/: authenticate.py  password.py
app/utils/verification/: generate_verify_token.py
migrations/: 20240117_01_D0N7A.sql
